--- a/package.json
+++ b/package.json
@@ -6,25 +6,49 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "dev": "tsc --watch",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
     "prepublishOnly": "npm run build"
   },
-  "keywords": ["family", "shopping", "plugin", "familymanager"],
-  "author": "FamilyManager",
-  "license": "MIT",
   "dependencies": {
-    "@familymanager/sdk": "^1.0.0",
-    "zod": "^3.22.4",
+    "@hono/node-server": "^1.13.7",
+    "@prisma/client": "^5.6.0",
+    "familymanager-sdk": "file:../FamilyManager-SDK",
     "hono": "^3.7.2",
-    "@prisma/client": "^5.6.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.2",
+    "eslint": "^8.0.0",
     "jest": "^29.7.0",
+    "prisma": "^5.6.0",
     "ts-jest": "^29.1.1",
-    "prisma": "^5.6.0"
+    "typescript": "^5.3.2"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/steiner385/fm-shopping.git"
+  },
+  "keywords": [
+    "family",
+    "shopping",
+    "plugin",
+    "familymanager"
+  ],
+  "author": "FamilyManager",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/steiner385/fm-shopping/issues"
+  },
+  "homepage": "https://github.com/steiner385/fm-shopping#readme",
   "prisma": {
     "schema": "src/prisma/schema.prisma"
   }
